fix: per-daerah

--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Data Kemiskinan</title>
     <link rel="stylesheet" href="/src/output.css"/>
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
   <body>
     <!-- navbar -->
@@ -102,50 +103,20 @@
   </nav>
   <!-- navbar end -->
     <div class="p-4 bg-white">
-    <div class="text-center pt-20 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Berdasarkan <br>Daerah Tahun 2024</div>
+    <div class="text-center pt-20 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Berdasarkan <br>Daerah Bulan Maret Tahun 2024</div>
+    <div>
+      <img src="/data-kemiskinan-indonesia/src/img/per-daerah.png" class="h-auto w-full rounded-lg" alt="per-daerah">
+    </div>
     <div class="px-3 pt-10 text-left">
-      <p class="text-justify">
-        Angka kemiskinan di Indonesia per Maret 2024 kembali mengalami penurunan, melanjutkan tren penurunan yang sudah terjadi sejak September 2022.
-      </p>
-      <p class="text-justify"></p>
-      Badan Pusat Statistik (BPS) melaporkan tingkat kemiskinan melanjutkan tren menurun menjadi 9,03% pada Maret 2024, dari sebelumnya sebesar 9,36% pada Maret 2023.
-      </p>
-      <p class="text-justify"></p>
-      Penduduk miskin pada Maret 2024 turun 0,68 juta orang dari Maret 2023, sehingga jumlah penduduk miskin menjadi sebesar 25,22 juta orang.
-      </p>
-      <p class="text-justify"></p>
-      Secara spasial juga terjadi perbaikan, di mana tingkat kemiskinan menurun baik di perkotaan maupun di perdesaan. Tingkat kemiskinan di perkotaan turun ke level 7,09% pada Maret 2024, dari sebelumnya yang mencapai 7,29% pada Maret 2023.
-      </p>
-      <p class="text-justify"></p>
-      Sementara itu, persentase penduduk miskin di perdesaan mengalami penurunan menjadi sebesar 11,79% pada Maret 2024, dari sebelumnya mencapai 12,22% pada Maret 2023.
-      </p>
-      <p class="text-justify"></p>
-      Penurunan kemiskinan juga terjadi di seluruh wilayah Indonesia, dengan penurunan tertinggi terjadi di Bali dan Nusa Tenggara, baik Nusa Tenggara Barat maupun Nusa Tenggara Timur.
-      </p>
-      <p class="text-justify"></p>
-      Selain itu, tingkat ketimpangan pengeluaran penduduk Indonesia (Rasio Gini) juga menurun dan berada di bawah level pra-pandemi menjadi sebesar 0,379 pada Maret 2024, dari sebelumnya di level 0,388 pada Maret 2023. <br> Level tersebut merupakan yang terendah dalam satu dekade terakhir. Penurunan ketimpangan terjadi baik di perkotaan maupun perdesaan.
-      </p>
-      <p class="text-justify"></p>
-      Penurunan angka kemiskinan pada Maret 2024 ditopang oleh solidnya aktivitas ekonomi domestik dan berbagai program bantuan sosial pemerintah, khususnya dalam merespons kenaikan inflasi pangan pada awal 2024.
-      </p>
-      <p class="text-justify"></p>
-      Terlepas dari penurunan kemiskinan yang paling tinggi di Bali, Nusa Tenggara Barat, dan Nusa Tenggara Timur, tetapi masih ada beberapa Provinsi yang masih mencatatkan angka kemiskinan cukup tinggi, meski secara nasional kembali menurun.
-      </p>
-      <p class="text-justify"></p>
-      Berdasarkan data dari BPS, jika dirincikan lebih lanjut, dari daerah perkotaan, maka provinsi dengan jumlah penduduk miskin paling banyak per Maret 2024 berada di Jawa Barat, dengan total mencapai 2.921.520 jiwa
-      </p>
-      <p class="text-justify"></p>
-      Sedangkan dari persentasenya, Papua Pegunungan menjadi provinsi dengan penduduk miskin terbanyak di perkotaan yakni mencapai 16,56%.
-      </p>
-      <p class="text-justify"></p>
-      Sementara dari jumlah penduduk miskin di pedesaan, Jawa Timur menjadi yang paling banyak per Maret 2024 yakni mencapai 2.399.990 jiwa. Sedangkan dari persentasenya, Papua Tengah menjadi provinsi dengan penduduk miskin terbanyak di pedesaan yakni mencapai 37,98%.
-      </p>
-      <p class="text-justify"></p>
-      Adapun secara total, Jawa Timur menduduki posisi pertama dengan jumlah penduduk miskin terbanyak yakni mencapai 3.982.690 jiwa. Sedangkan dari persentase total, Papua Pegunungan menduduki posisi pertama dengan persentase penduduk miskin terbanyak yakni mencapai 32,97%.
+      <p class="text-justify" data-aos="fade-right" data-aos-duration="400">
+        Angka kemiskinan di Indonesia pada Maret 2024 kembali turun menjadi 9,03%, dari 9,36% pada Maret 2023, dengan penurunan jumlah penduduk miskin sebesar 0,68 juta orang menjadi 25,22 juta. Baik di perkotaan maupun perdesaan, terjadi penurunan: kemiskinan di perkotaan turun ke 7,09% (dari 7,29%), dan di perdesaan menjadi 11,79% (dari 12,22%).
+      Penurunan tertinggi terjadi di Bali dan Nusa Tenggara. Rasio Gini juga menurun menjadi 0,379, level terendah dalam satu dekade, didorong oleh solidnya ekonomi domestik dan program bantuan sosial.
+      <br>
+      Meskipun kemiskinan menurun secara nasional, beberapa daerah masih mencatat angka tinggi. Jawa Barat memiliki penduduk miskin perkotaan terbanyak (2,92 juta jiwa), sementara Papua Pegunungan memiliki persentase tertinggi di perkotaan (16,56%). Di perdesaan, Jawa Timur mencatat jumlah penduduk miskin tertinggi (2,4 juta jiwa), sedangkan Papua Tengah memiliki persentase tertinggi (37,98%). Secara total, Jawa Timur memiliki jumlah penduduk miskin terbesar (3,98 juta jiwa), sementara Papua Pegunungan mencatat persentase kemiskinan tertinggi (32,97%).
       </p>
       <p class="text-gray-600 italic text-center text-sm">Sumber: CNBC Indonesia</p>
     </div>
-    <div class="relative overflow-x-auto shadow-md sm:rounded-lg pt-10">
+    <div class="relative overflow-x-auto shadow-md sm:rounded-lg pt-10" data-aos="fade-in" data-aos-duration="400">
       <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
           <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
               <tr>
@@ -393,8 +364,11 @@
           </tbody>
       </table>
       <p class="text-gray-600 italic text-center text-sm">Sumber:Badan Pusat Statistik (BPS)</p>
-  </div>
-  
-      <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+    </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>  
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
   </body>
 </html>
