--- a/content/satu-dekade.html
+++ b/content/satu-dekade.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Data Kemiskinan</title>
     <link rel="stylesheet" href="/src/output.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
       href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"
       rel="stylesheet"
@@ -145,11 +146,11 @@
   </nav>
   <!-- navbar end -->
     <div>
-    <div class="text-center pt-20 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Di Indonesia <br>Per Bulan Maret Tahun 2014-2024</div>
+    <div class="text-center pt-24 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Di Indonesia <br>Per Bulan Maret Tahun 2014-2024</div>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <div id="data-series-chart"></div>
     <p class="text-gray-600 italic text-center text-sm">Sumber:Badan Pusat Statistik (BPS)</p>
-      <div class="px-3 pt-10">
+      <div class="px-3 pt-10 text-justify" data-aos="fade-right" data-aos-duration="400">
         <p class="mb-3 text-left text-justify dark:text-gray-400">Badan Pusat Statistik (BPS) mencatat jumlah penduduk miskin pada Maret 2024 sebesar 25,22 juta orang. Angka ini menjadi yang terendah dalam 1 dekade terakhir. Sejak 2014 hingga 2024 kemiskinan sempat meningkat pada pandemi Covid-19 lalu menurun hingga Maret 2024. Bahkan, jumlah penduduk miskin berkurang sekitar 3,06 juta orang atau turun sekitar 2,22 persen poin dalam sepuluh tahun terakhir. Jika di rata-rata jumlah penduduk miskin berkurang sekitar 300.000 orang per tahun.</p>
         <p class="mb-3 text-left text-justify dark:text-gray-400">Pada Maret 2014, jumlah penduduk miskin sebesar 28,28 juta  orang (11,25%). Setelah itu, tingkat kemiskinan terus menurun hingga Maret 2019 sebanyak 25,14 juta orang (9,41%). Namun, saat pandemi Covid-19 kemiskinan meningkat, yaitu pada Maret 2020 sebanyak 26,42 juta orang (9,78%) dan Maret 2021 sebanyak 27,54 juta orang (10,14%). Setelah periode tersebut, kemiskinan terus menurun sampai pada Maret 2024 sebanyak 25,22 juta orang (9,03%).</p>
       </div>
@@ -246,5 +247,9 @@
         chart.render();
         }
               </script>
+              <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+              <script>
+                AOS.init();
+              </script>  
   </body>
 </html>
