Modify: fix navbar in data per-daerah and data per-dekade

--- a/content/tentangKami.html
+++ b/content/tentangKami.html
@@ -172,7 +172,7 @@
   <div class="container px-6 py-10 mx-auto -mt-72 sm:-mt-80 md:-mt-96 pt-10">
       <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-16 md:grid-cols-2 xl:grid-cols-3">
           <div class="flex flex-col items-center p-4 border sm:p-6 rounded-xl" data-aos="flip-left" data-aos-duration="1000">
-              <img class="object-cover w-full rounded-xl aspect-square" src="/src/img/tim/rifki.png" alt="">
+              <img class="object-cover w-full rounded-xl aspect-square" src="/src/img/tim/danu.png" alt="">
               <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize ">Danu Wisesa</h1>
               <div class="flex mt-3 -mx-2">
                   <a href="#" class="mx-2 text-gray-600 transition-colors duration-300 hover:text-blue-500 dark:hover:text-blue-400" aria-label="Reddit">
@@ -239,7 +239,7 @@
           </div>
 
           <div class="flex flex-col items-center p-4 border sm:p-6 rounded-xl" data-aos="flip-left" data-aos-duration="2000">
-              <img class="object-cover w-full rounded-xl aspect-square" src="/src/img/tim/rifki.png" alt="">
+              <img class="object-cover w-full rounded-xl aspect-square" src="/src/img/tim/noven.png" alt="">
 
               <h1 class="mt-4 text-2xl font-semibold text-gray-700 capitalize ">Noventino Putra Nurmansyah</h1>
               <div class="flex mt-3 -mx-2">
