Modify: Set directory because this directory is to messy

--- a/content/program.html
+++ b/content/program.html
@@ -84,14 +84,14 @@
                   <li>
                     <a
                       href="per-daerah.html"
-                      class="block px-4 py-2 hover:bg-gray-100 hover:text-white"
+                      class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
                       >Data Per-daerah</a
                     >
                   </li>
                   <li>
                     <a
                       href="satu-dekade.html"
-                      class="block px-4 py-2 hover:bg-gray-100 hover:text-white"
+                      class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
                       >Data Satu Dekade</a
                     >
                   </li>
@@ -143,7 +143,7 @@
             class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 xl:gap-12 md:grid-cols-3 xl:grid-cols-3">
             <div
               class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group" data-aos="fade-up" data-aos-duration="400"
-              style="background-image: url('/src/img/kartujakarta.png')">
+              style="background-image: url('/src/img/program/kartujakarta.png')">
               <div
                 class="flex flex-col justify-center items-center w-full h-full px-8 py-4 transition-opacity duration-300 opacity-0 bg-gray-800/60 group-hover:opacity-100">
                 <h2 class="mt-4 text-2xl font-semibold text-white capitalize" >
@@ -153,7 +153,7 @@
             </div>
             <div
               class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group" data-aos="fade-up" data-aos-duration="500"
-              style="background-image: url('/src/img/jps.png')">
+              style="background-image: url('/src/img/program/jps.png')">
               <div
                 class="flex flex-col justify-center items-center w-full h-full px-8 py-4 transition-opacity duration-300 opacity-0 bg-gray-800/60 group-hover:opacity-100">
                 <h2 class="mt-4 text-2xl font-semibold text-white capitalize">
@@ -163,7 +163,7 @@
             </div>
             <div
               class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group" data-aos="fade-up" data-aos-duration="600"
-              style="background-image: url('/src/img/kjs.png')">
+              style="background-image: url('/src/img/program/kjs.png')">
               <div
                 class="flex flex-col justify-center items-center w-full h-full px-8 py-4 transition-opacity duration-300 opacity-0 bg-gray-800/60 group-hover:opacity-100">
                 <h2 class="mt-4 text-2xl font-semibold text-white capitalize">
@@ -173,7 +173,7 @@
             </div>
             <div
               class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group" data-aos="fade-up" data-aos-duration="700"
-              style="background-image: url('/src/img/rasda.png')">
+              style="background-image: url('/src/img/program/rasda.png')">
               <div
                 class="flex flex-col justify-center items-center w-full h-full px-8 py-4 transition-opacity duration-300 opacity-0 bg-gray-800/60 group-hover:opacity-100">
                 <h2 class="mt-4 text-2xl font-semibold text-white capitalize">
@@ -183,7 +183,7 @@
             </div>
             <div
               class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group" data-aos="fade-up" data-aos-duration="800"
-              style="background-image: url('/src/img/blt.png')">
+              style="background-image: url('/src/img/program/blt.png')">
               <div
                 class="flex flex-col justify-center items-center w-full h-full px-8 py-4 transition-opacity duration-300 opacity-0 bg-gray-800/60 group-hover:opacity-100">
                 <h2 class="mt-4 text-2xl font-semibold text-white capitalize">
@@ -193,7 +193,7 @@
             </div>
             <div
               class="overflow-hidden bg-cover rounded-lg cursor-pointer h-96 group" data-aos="fade-up" data-aos-duration="900"
-              style="background-image: url('/src/img/pkh.png')">
+              style="background-image: url('/src/img/program/pkh.png')">
               <div
                 class="flex flex-col justify-center items-center w-full h-full px-8 py-4 transition-opacity duration-300 opacity-0 bg-gray-800/60 group-hover:opacity-100">
                 <h2 class="mt-4 text-2xl font-semibold text-white capitalize">
@@ -219,7 +219,7 @@
       <div class="grid grid-cols-1 gap-8 mt-8 xl:mt-12 lg:gap-12 md:grid-cols-2 lg:grid-cols-2 px-4">
         <!-- DKI JAKARTA -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/jakarta.png" alt="Jakarta">
+          <img class="object-cover w-full h-64" src="/src/img/program/jakarta.png" alt="Jakarta">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">DKI JAKARTA</h1>
@@ -234,7 +234,7 @@
         </div>
         <!-- JAWA BARAT -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/jawa-barat.png" alt="Jawa Barat">
+          <img class="object-cover w-full h-64" src="/src/img/program/jawa-barat.png" alt="Jawa Barat">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">JAWA BARAT</h1>
@@ -249,7 +249,7 @@
         </div>
         <!-- JAWA TENGAH -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/jawa-tengah.png" alt="Jawa Tengah">
+          <img class="object-cover w-full h-64" src="/src/img/program/jawa-tengah.png" alt="Jawa Tengah">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">JAWA TENGAH</h1>
@@ -264,7 +264,7 @@
         </div>
         <!-- JAWA TIMUR -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/jawa-timur.png" alt="Jawa Timur">
+          <img class="object-cover w-full h-64" src="/src/img/program/jawa-timur.png" alt="Jawa Timur">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">JAWA TIMUR</h1>
@@ -279,7 +279,7 @@
         </div>
         <!-- SUMATERA BARAT -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/sumatera-barat.png" alt="Sumatera Barat">
+          <img class="object-cover w-full h-64" src="/src/img/program/sumatera-barat.png" alt="Sumatera Barat">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">SUMATERA BARAT</h1>
@@ -294,7 +294,7 @@
         </div>
         <!-- ACEH -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/aceh.png" alt="Aceh">
+          <img class="object-cover w-full h-64" src="/src/img/program/aceh.png" alt="Aceh">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">ACEH</h1>
@@ -309,7 +309,7 @@
         </div>
         <!-- PAPUA -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/papua.png" alt="Papua">
+          <img class="object-cover w-full h-64" src="/src/img/program/papua.png" alt="Papua">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">PAPUA</h1>
@@ -324,7 +324,7 @@
         </div>
         <!-- NUSA TENGGARA TIMUR -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/ntt.png" alt="Nusa Tenggara Timur">
+          <img class="object-cover w-full h-64" src="/src/img/program/ntt.png" alt="Nusa Tenggara Timur">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">NUSA TENGGARA TIMUR</h1>
@@ -339,7 +339,7 @@
         </div>
         <!-- SULAWESI SELATAN -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-right" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/sulsel.png" alt="Sulawesi Selatan">
+          <img class="object-cover w-full h-64" src="/src/img/program/sulsel.png" alt="Sulawesi Selatan">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">SULAWESI SELATAN</h1>
@@ -354,7 +354,7 @@
         </div>
         <!-- BALI -->
         <div class="max-w-2xl overflow-hidden bg-white rounded-lg shadow-md dark:bg-gray-800 mb-4" data-aos="fade-left" data-aos-duration="400">
-          <img class="object-cover w-full h-64" src="/src/img/bali.png" alt="Bali">
+          <img class="object-cover w-full h-64" src="/src/img/program/bali.png" alt="Bali">
           <div class="p-6">
             <div>
               <h1 class="font-bold text-2xl">BALI</h1>
