--- a/content/per-daerah.html
+++ b/content/per-daerah.html
@@ -11,12 +11,12 @@
   <body>
     <!-- navbar -->
     <nav
-    class="bg-white fixed z-10 w-full transition duration-300 ease-in-out shadow-lg"
+    class="bg-bahtera fixed z-10 w-full transition duration-300 ease-in-out shadow-lg"
     id="navbar">
     <div
       class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a
-        href="https://flowbite.com/"
+        href="beranda.html"
         class="flex items-center space-x-3 rtl:space-x-reverse">
         <span
           class="self-center text-2xl font-semibold whitespace-nowrap text-black"
@@ -105,7 +105,7 @@
     <div class="p-4 bg-white">
     <div class="text-center pt-20 font-bold text-1xl md:text-1xl">Persentase Kemiskinan Berdasarkan <br>Daerah Bulan Maret Tahun 2024</div>
     <div>
-      <img src="/data-kemiskinan-indonesia/src/img/per-daerah.png" class="h-auto w-full rounded-lg" alt="per-daerah">
+      <img src="/src/img/per-daerah.png" class="h-auto w-full rounded-lg md:w-6" alt="per-daerah">
     </div>
     <div class="px-3 pt-10 text-left">
       <p class="text-justify" data-aos="fade-right" data-aos-duration="400">
