--- a/content/satu-dekade.html
+++ b/content/satu-dekade.html
@@ -2,33 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Data Kemiskinan</title>
-    <link rel="stylesheet" href="/src/output.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link rel="stylesheet" href="/src/output.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"/>
   </head>
   <body>
     <!-- navbar -->
-    <nav
-      class="bg-white fixed z-10 w-full transition duration-300 ease-in-out shadow-lg"
-      id="navbar"
-    >
-      <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-      >
-        <a
-          href="https://flowbite.com/"
-          class="flex items-center space-x-3 rtl:space-x-reverse"
-        >
-          <span
-            class="self-center text-2xl font-semibold whitespace-nowrap text-black"
-            id="logo"
-            >Web Kemiskinan</span
-          >
+    <nav class="bg-white fixed z-10 w-full transition duration-300 ease-in-out shadow-lg" id="navbar">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="/content/beranda.html" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-black" id="logo">Web Kemiskinan</span>
         </a>
         <button
           data-collapse-toggle="navbar-menu"
@@ -36,103 +22,84 @@
           class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-black rounded-lg md:hidden focus:outline-none"
           aria-controls="navbar"
           aria-expanded="false"
-          id="toggle"
-        >
+          id="toggle">
           <span class="sr-only">menu</span>
           <svg
             class="w-5 h-5"
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
-            viewBox="0 0 17 14"
-          >
+            viewBox="0 0 17 14">
             <path
               stroke="currentColor"
               stroke-linecap="round"
               stroke-linejoin="round"
               stroke-width="2"
-              d="M1 1h15M1 7h15M1 13h15"
-            />
+              d="M1 1h15M1 7h15M1 13h15"/>
           </svg>
         </button>
         <div class="hidden w-full md:block md:w-auto" id="navbar-menu">
           <ul
-            class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0"
-          >
+            class="font-medium flex flex-col p-4 md:p-0 mt-4 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0">
             <li>
               <a
                 href="beranda.html"
                 class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
-                >Beranda</a
-              >
+                >Beranda</a>
             </li>
             <li
               id="dropdownNavbarLink"
               data-dropdown-toggle="dropdownNavbar"
-              class="py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link flex cursor-pointer items-center justify-between"
-            >
+              class="py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link flex cursor-pointer items-center justify-between">
               Data Kemiskinan
               <svg
                 class="w-2.5 h-2.5 ms-2.5"
                 aria-hidden="true"
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
-                viewBox="0 0 10 6"
-              >
+                viewBox="0 0 10 6">
                 <path
                   stroke="currentColor"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                   stroke-width="2"
-                  d="m1 1 4 4 4-4"
-                />
+                  d="m1 1 4 4 4-4"/>
               </svg>
             </li>
             <!-- Dropdown menu -->
             <div
               id="dropdownNavbar"
-              class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44"
-            >
+              class="z-10 hidden font-normal bg-white divide-y divide-gray-100 rounded-lg shadow-lg w-44">
               <ul
-                class="py-2 text-sm text-gray-700 dark:text-gray-400"
-                aria-labelledby="dropdownLargeButton"
-              >
+                class="py-2 text-sm text-gray-700"
+                aria-labelledby="dropdownLargeButton">
                 <li>
                   <a
                     href="per-daerah.html"
-                    class="block px-4 py-2 hover:bg-gray-100 hover:text-black"
-                    >Data Per-daerah</a
-                  >
+                    class="block px-4 py-2 hover:bg-gray-100 hover:text-black">Data Per-daerah</a>
                 </li>
                 <li>
                   <a
                     href="satu-dekade.html"
-                    class="block px-4 py-2 hover:bg-gray-100 underline underline-offset-8 hover:text-black"
-                    >Data Satu Dekade</a
-                  >
+                    class="block px-4 py-2 hover:bg-gray-100 underline underline-offset-8 hover:text-black">Data Satu Dekade</a>
                 </li>
               </ul>
             </div>
             <li>
               <a
                 href="program.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
-                >Program</a
-              >
+                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link">Program</a>
             </li>
             <li>
               <a
                 href="laporan.html"
-                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
-                >Laporan</a
-              >
+                class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link">Laporan</a>
             </li>
             <li>
               <a
                 href="tentangKami.html"
                 class="block py-2 px-3 text-black rounded transition-all duration-300 hover:text-gray-600 nav-link"
-                >Tentang Kami</a
-              >
+                >Tentang Kami</a>
             </li>
           </ul>
         </div>
@@ -140,47 +107,17 @@
     </nav>
     <!-- navbar end -->
     <div>
-      <div class="text-center pt-20 font-bold text-1xl md:text-1xl">
-        Persentase Kemiskinan Di Indonesia <br />
-        Selama 10 Terakhir
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-      <div id="data-series-chart"></div>
-      <div class="px-3">
-        <p class="mb-3 text-left text-justify text-gray-500 dark:text-gray-400">
-          Badan Pusat Statistik (BPS) mencatat jumlah penduduk miskin pada Maret
-          2024 sebesar 25,22 juta orang. Angka ini menjadi yang terendah dalam 1
-          dekade terakhir. Sejak 2014 hingga 2024 kemiskinan sempat meningkat
-          pada pandemi Covid-19 lalu menurun hingga Maret 2024.
-        </p>
-        <p class="mb-3 text-left text-justify text-gray-500 dark:text-gray-400">
-          Bahkan, jumlah penduduk miskin berkurang sekitar 3,06 juta orang atau
-          turun sekitar 2,22 persen poin dalam sepuluh tahun terakhir. Jika di
-          rata-rata jumlah penduduk miskin berkurang sekitar 300.000 orang per
-          tahun.
-        </p>
-        <p class="mb-3 text-left text-justify text-gray-500 dark:text-gray-400">
-          Pada Maret 2014, jumlah penduduk miskin sebesar 28,28 juta orang
-          (11,25%). Setelah itu, tingkat kemiskinan terus menurun hingga Maret
-          2019 sebanyak 25,14 juta orang (9,41%). Namun, saat pandemi Covid-19
-          kemiskinan meningkat, yaitu pada Maret 2020 sebanyak 26,42 juta orang
-          (9,78%) dan Maret 2021 sebanyak 27,54 juta orang (10,14%). Setelah
-          periode tersebut, kemiskinan terus menurun sampai pada Maret 2024
-          sebanyak 25,22 juta orang (9,03%).
-        </p>
+        <!-- title -->
         <div class="container lg:mx-auto md:mx-auto pt-24 mb-10">
-          <h1
-            class="text-2xl font-semibold text-center text-gray-800 capitalize lg:text-3xl"
-          >
-            Persentase Kemiskinan Di Indonesia Tahun 2014-2024
+          <h1 class="text-2xl font-semibold text-center text-gray-800 capitalize lg:text-3xl">
+           Persentase Kemiskinan Di Indonesia Tahun 2014-2024
           </h1>
           <div class="flex justify-center mx-auto mt-6">
             <span class="inline-block w-40 h-1 bg-teal-500 rounded-full"></span>
-            <span
-              class="inline-block w-3 h-1 mx-1 bg-teal-500 rounded-full"
-            ></span>
+            <span class="inline-block w-3 h-1 mx-1 bg-teal-500 rounded-full"></span>
             <span class="inline-block w-1 h-1 bg-teal-500 rounded-full"></span>
           </div>
+          <!-- title -->
           <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
           <div id="data-series-chart"></div>
           <p class="text-gray-600 italic text-center text-sm">
@@ -189,8 +126,7 @@
           <div
             class="px-3 pt-10 text-justify"
             data-aos="fade-right"
-            data-aos-duration="400"
-          >
+            data-aos-duration="400">
             <p class="mb-3 text-left text-justify">
               Badan Pusat Statistik (BPS) mencatat jumlah penduduk miskin pada
               Maret 2024 sebesar 25,22 juta orang. Angka ini menjadi yang
@@ -325,6 +261,10 @@
         );
         chart.render();
       }
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
